# Kuroko

./: .gitignore  Cargo.toml  README.md  flake.nix
crates/erika/: Cargo.toml  build.rs
crates/erika/assets/artcnn/: README.md  export_artcnn.py
crates/erika/src/: apple.rs  audio.rs  core.rs  danmaku.rs  ffmpeg.rs  overlay.rs  playback.rs  presenter.rs  renderer.rs  source.rs  subtitle.rs  text.rs  trace.rs
crates/erika/src/danmaku/: dfm.rs
crates/erika/src/danmaku/dfm_core/: filters.rs  mod.rs  types.rs
crates/erika/src/renderer/: pipeline.rs  wgpu.rs  wgpu_overlay.wgsl  wgpu_video.wgsl
crates/erika/src/renderer/metal/: apple.rs  mod.rs  upscaler.rs  upscaler_matmul.rs
crates/erika/tests/: artcnn_upscaler.rs
crates/erika/tests/data/artcnn/c4f16/: input_128x72.f32  output_256x144.f32
crates/erika/tests/data/artcnn/c4f32/: output_256x144.f32
crates/erika_capi/: Cargo.toml
crates/erika_capi/include/: erika.h
crates/erika_capi/src/: lib.rs
crates/erika_ffmpeg_sys/: Cargo.toml  build.rs  wrapper.h
crates/erika_ffmpeg_sys/src/: lib.rs
crates/kuroko/: Cargo.toml  build.rs
crates/kuroko/assets/: NOTICE.md
crates/kuroko/src/: apple.rs  audio.rs  core.rs  danmaku.rs  ffmpeg.rs  lib.rs  overlay.rs  playback.rs  presenter.rs  renderer.rs  source.rs  subtitle.rs  trace.rs
crates/kuroko/src/danmaku/: dfm.rs
crates/kuroko/src/danmaku/dfm_core/: factory.rs  measure.rs  mod.rs  retainer.rs
crates/kuroko/src/danmaku_next2/: layout.rs  mod.rs  present.rs
crates/kuroko/src/danmaku_next2/dfm_core/: factory.rs  filters.rs  measure.rs  retainer.rs  types.rs
crates/kuroko/src/danmaku_next2/engine/: frame.rs  renderer_core.rs  renderer_draw.rs  rendering.rs  runtime.rs
crates/kuroko/src/renderer/: pipeline.rs  wgpu.rs  wgpu_overlay.wgsl  wgpu_video.wgsl
crates/kuroko/src/renderer/metal/: apple.rs  macos.rs  mod.rs
crates/kuroko_capi/: Cargo.toml
crates/kuroko_capi/include/: kuroko.h
crates/kuroko_capi/src/: lib.rs
crates/kuroko_ffmpeg_sys/: Cargo.toml  build.rs  wrapper.h
docs/: architecture.md  danmaku_architecture.md  development.md  flutter_embedding.md
examples/capi_smoke/: Cargo.toml
examples/capi_smoke/src/: main.rs
examples/coreaudio_smoke/: Cargo.toml
examples/coreaudio_smoke/src/: main.rs
examples/danmaku_benchmark/: Cargo.toml
examples/danmaku_benchmark/src/: main.rs
examples/danmaku_perf_lab/: Cargo.toml  README.md  build.rs
examples/danmaku_perf_lab/native/: DanmakuPerfLab.m
examples/danmaku_perf_lab/src/: main.rs
examples/danmaku_sync_smoke/: Cargo.toml  test_danmaku.json
examples/danmaku_sync_smoke/src/: main.rs
examples/ffmpeg_audio_decode/: Cargo.toml
examples/ffmpeg_audio_decode/src/: main.rs
examples/ffmpeg_decode/: Cargo.toml
examples/ffmpeg_decode/src/: main.rs
examples/ffmpeg_demux/: Cargo.toml
examples/ffmpeg_demux/src/: main.rs
examples/ffmpeg_probe/: Cargo.toml
examples/ffmpeg_probe/src/: main.rs
examples/ffmpeg_probe_source/: Cargo.toml
examples/ffmpeg_probe_source/src/: main.rs
examples/ffmpeg_videotoolbox/: Cargo.toml
examples/ffmpeg_videotoolbox/src/: main.rs
examples/macos_native_demo/: Cargo.toml  build.rs
examples/macos_native_demo/native/: ErikaMetalDemo.m  KurokoMetalDemo.m
examples/macos_native_demo/src/: main.rs
examples/metal_import_videotoolbox/: Cargo.toml
examples/metal_import_videotoolbox/src/: main.rs
examples/metal_overlay_check/: Cargo.toml
examples/metal_overlay_check/native/: PresenterCheck.m
examples/metal_overlay_check/src/: main.rs
examples/metal_presenter_check/: Cargo.toml  build.rs
examples/metal_presenter_check/native/: PresenterCheck.m
examples/metal_presenter_check/src/: main.rs
examples/next2_danmaku_smoke/: Cargo.toml
examples/next2_danmaku_smoke/src/: main.rs
examples/playback_audio_tick/: Cargo.toml
examples/playback_audio_tick/src/: main.rs
examples/playback_tick/: Cargo.toml
examples/playback_tick/src/: main.rs
examples/player_tick/: Cargo.toml
examples/player_tick/src/: main.rs
examples/render_pipeline_plan/: Cargo.toml
examples/render_pipeline_plan/src/: main.rs
examples/wgpu_decode_png/: Cargo.toml
examples/wgpu_decode_png/src/: main.rs
examples/wgpu_overlay_png/: Cargo.toml
examples/wgpu_overlay_png/src/: main.rs
examples/wgpu_video_png/: Cargo.toml
examples/wgpu_video_png/src/: main.rs
examples/wgpu_window_check/: Cargo.toml  build.rs
examples/wgpu_window_check/native/: WgpuWindowCheck.m
examples/wgpu_window_check/src/: main.rs
readme/: README.en.md  README.ja.md  README.md
xtask/: Cargo.toml
xtask/src/: main.rs
