[workspace]
members = [
  "crates/kuroko",
  "crates/kuroko_capi",
  "crates/kuroko_ffmpeg_sys",
  "examples/capi_smoke",
  "examples/ffmpeg_audio_decode",
  "examples/ffmpeg_decode",
  "examples/ffmpeg_demux",
  "examples/ffmpeg_probe",
  "examples/ffmpeg_probe_source",
  "examples/playback_tick",
  "examples/player_tick",
  "examples/coreaudio_smoke",
  "examples/danmaku_sync_smoke",
  "examples/danmaku_perf_lab",
  "examples/metal_presenter_check",
  "examples/ffmpeg_videotoolbox",
  "examples/metal_import_videotoolbox",
  "examples/metal_overlay_check",
  "examples/playback_audio_tick",
  "examples/render_pipeline_plan",
  "examples/macos_native_demo",
  "examples/wgpu_video_png",
  "examples/wgpu_decode_png",
  "examples/wgpu_window_check",
  "examples/wgpu_overlay_png",
  "xtask",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/AimesSoft/Kuroko"
rust-version = "1.92"
version = "0.0.1"

[workspace.dependencies]
ab_glyph = "0.2.32"
aho-corasick = "1.1.4"
anyhow = "1.0.100"
bitflags = "2.10.0"
bindgen = "0.72.1"
crossbeam-channel = "0.5.15"
fontdb = "0.23.0"
regex = "1.12.3"
rustc-hash = "2.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
smallvec = "1.15.1"
coreaudio-rs = "0.14.2"
libc = "0.2.177"
objc2 = "0.6.3"
objc2-app-kit = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-core-graphics = "0.3.2"
objc2-core-video = "0.3.2"
objc2-foundation = "0.3.2"
objc2-metal = "0.3.2"
objc2-quartz-core = "0.3.2"
thiserror = "2.0.17"
ureq = { version = "3.1.4", default-features = false, features = ["rustls"] }

[profile.dev]
debug = 2

[profile.release]
codegen-units = 1
lto = "thin"
