[package]
name = "erika_capi"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = ["libass"]
libass = ["erika/libass"]

[dependencies]
crossbeam-channel.workspace = true
erika = { path = "../erika", default-features = false }
serde_json.workspace = true
