[package]
name = "kuroko"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
build = "build.rs"

[features]
default = []
libass = []
wgpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]

[dependencies]
ab_glyph.workspace = true
aho-corasick.workspace = true
crossbeam-channel.workspace = true
fontdb.workspace = true
libc.workspace = true
kuroko_ffmpeg_sys = { path = "../kuroko_ffmpeg_sys" }
objc2.workspace = true
objc2-core-foundation.workspace = true
objc2-core-graphics = { workspace = true, features = ["CGColorSpace"] }
objc2-core-video.workspace = true
objc2-foundation.workspace = true
objc2-metal.workspace = true
objc2-quartz-core.workspace = true
regex.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
thiserror.workspace = true
ureq.workspace = true
wgpu = { version = "29.0.3", optional = true }
pollster = { version = "0.4.0", optional = true }
bytemuck = { version = "1.25.0", features = ["derive"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-rs.workspace = true
