[package]
name = "kuroko_ffmpeg_sys"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["lgpl"]
gpl-full = []
lgpl = []

[dependencies]
libc.workspace = true

[build-dependencies]
bindgen.workspace = true
