[package]
name = "macos_native_demo"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

build = "build.rs"

[dependencies]
crossbeam-channel.workspace = true
kuroko = { path = "../../crates/kuroko" }

[features]
default = ["danmaku-next2"]
danmaku-next2 = ["kuroko/danmaku-next2"]
libass = ["kuroko/libass"]

[build-dependencies]
cc = "1.2.47"
