[package]
name = "macos_native_demo"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

build = "build.rs"

[dependencies]
crossbeam-channel.workspace = true
erika = { path = "../../crates/erika" }

[features]
default = []
libass = ["erika/libass"]

[build-dependencies]
cc = "1.2.47"
